<resources>
    <string name="app_name">TransporterDriver</string>
    <string name="welcome">WELCOME!</string>
    <string name="login">LOG IN</string>
    <string name="register">SIGNUP</string>
    <string name="select_language">Select your preferred\nlanguage/</string>
    <string name="english">ENGLISH</string>
    <string name="hindi">हिन्दी</string>
    <string name="enter_mobile_number">Registered Mobile Number</string>
    <string name="enter_your_mobile_number">Mobile Number</string>
    <string name="next">NEXT</string>
    <string name="enter_otp">Enter the 4-digit code sent you at </string>
    <string name="did_you_enter_correct_mobile">Did you enter the correct mobile number?</string>
    <string name="verify">Verify</string>
    <string name="title_location_request">Please allow us to reach you.</string>
    <string name="msg_location_request">we picks you up exactly where you are.\nTo start riding, choose allow so \nwe can find your location.</string>
    <string name="Okay">Okay</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_map_api_key">AIzaSyCS9B4G7Y-e2MYMO_S-Muq06u9WIBOcR1M</string>
    <string name="where_to">Enter Drop Location</string>
    <string name="from_to">Pickup location</string>
    <string name="to_where">Drop location</string>
    <string name="loading">Loading…</string>
    <string name="turn_on_device_location">To continue,turn on device location,which uses Google\'s location service</string>
    <string name="device_location_msg">this may change the Location mode that you\'ve selected for your device.</string>
    <string name="select">Select</string>
    <string name="drag_the_marker">Drag &amp; Drop the marker to change location</string>
    <string name="try_again">Try again!!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">FullName</string>
    <string name="email">Email(Optional)</string>
    <string name="upload_addhar_card">Tab to upload Aadhar Card</string>
    <string name="upload_driving_licence">Tab to upload Driving licence</string>
    <string name="back">Back</string>
    <string name="select_image_picker">Select Image Picker</string>
    <string name="unable_to_store_image">Unable to store image!!</string>
    <string name="mode_driving">Driving</string>
    <string name="mode_offline">Offline</string>
    <string name="mode_online">Online</string>
</resources>
