<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/signup_Signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/signup_constraintLay01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/signup_profilePic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectanguler_white_red"
                    android:paddingBottom="5dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@id/signup_FullName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/profile" />

                <EditText
                    android:id="@+id/signup_FullName"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectanguler_white_red"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:soundEffectsEnabled="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toTopOf="@+id/signup_MobileNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup_profilePic"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/signup_MobileNumber"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectanguler_white_red"
                    android:ems="10"
                    android:hint="@string/enter_your_mobile_number"
                    android:inputType="number"
                    android:paddingStart="20dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:soundEffectsEnabled="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toTopOf="@+id/signup_Email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_FullName"
                    app:layout_constraintVertical_chainStyle="packed" />

                <EditText
                    android:id="@+id/signup_Email"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/rectanguler_white_red"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:soundEffectsEnabled="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toTopOf="@+id/signup_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_MobileNumber" />

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/rectanguler_white_red"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:soundEffectsEnabled="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toTopOf="@+id/signup_ConformPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_Email" />

                <EditText
                    android:id="@+id/signup_ConformPassword"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/rectanguler_white_red"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:soundEffectsEnabled="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_password" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/signup_constraintLay02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/signup_aadharcard"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rectanguler_white_red"
                    android:scaleType="centerInside"
                    android:tint="@color/colorBlur"
                    app:layout_constraintBottom_toTopOf="@id/signup_drivingLicence"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside"
                    app:srcCompat="@drawable/aadhaarcard" />

                <ImageView
                    android:id="@+id/signup_drivingLicence"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rectanguler_white_red"
                    android:paddingBottom="5dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:scaleType="centerInside"
                    android:tint="@color/colorBlur"
                    app:layout_constraintBottom_toTopOf="@id/signup_constraintLay02_back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup_aadharcard"
                    app:srcCompat="@drawable/driving_lisense" />

                <TextView
                    android:id="@+id/signup_constraintLay02_aadharText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/upload_addhar_card"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/signup_aadharcard"
                    app:layout_constraintEnd_toEndOf="@id/signup_aadharcard"
                    app:layout_constraintStart_toStartOf="@id/signup_aadharcard"
                    app:layout_constraintTop_toTopOf="@id/signup_aadharcard" />

                <TextView
                    android:id="@+id/signup_constraintLay02_driving_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/upload_driving_licence"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/signup_drivingLicence"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/signup_drivingLicence"
                    app:layout_constraintTop_toTopOf="@id/signup_drivingLicence"
                    app:layout_constraintVertical_bias="0.49" />

                <Button
                    android:id="@+id/signup_constraintLay02_back"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rectengular_blue_red"
                    android:soundEffectsEnabled="true"
                    android:text="@string/back"
                    android:textColor="@color/textWhite"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup_drivingLicence" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/signup_Signup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rectengular_blue_red"
        android:soundEffectsEnabled="true"
        android:text="@string/next"
        android:textColor="@color/textWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView2" />

</android.support.constraint.ConstraintLayout>